--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
+          <li><a href="#skills">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -31,7 +31,7 @@
         <div class="menu-links">
           <ul>
             <li><a href="#about" onclick="toggleMenu()">About</a></li>
-            <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+            <li><a href="#skills" onclick="toggleMenu()">Experience</a></li>
             <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
             <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
           </ul>
@@ -40,12 +40,12 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="John Doe profile picture" />
+        <img src="./assets/profilePicture.png" alt="Ronald Sevilla profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">Ronald</h1>
-        <p class="section__text__p2">Frontend Developer</p>
+        <h1 class="title">Ronald Sevilla</h1>
+        <p class="section__text__p2"> Web Developer</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -254,7 +254,6 @@
           </ul>
         </div>
       </nav>
-      <p>All Rights Reserved. Credit to the original creator.</p>
     </footer>
     <script src="script.js"></script>
   </body>
