--- a/index.html
+++ b/index.html
@@ -13,15 +13,23 @@
       <div class="logo">Ronald</div>
       <div>
         <ul class="nav-links">
+          <li><a href="#profile">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
+      <button id="themeToggle" class="theme-toggle" aria-label="Toggle Light/Dark Mode">
+        <span class="toggle-icon">🌙</span>
+    </button>
+
     </nav>
     <nav id="hamburger-nav">
       <div class="logo">Ronald</div>
+      <button id="themeToggleMobile" class="theme-toggle" aria-label="Toggle Light/Dark Mode">
+        <span class="toggle-icon">🌙</span>
+      </button>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -30,6 +38,7 @@
         </div>
         <div class="menu-links">
           <ul>
+            <li><a href="#profile" onclick="toggleMenu()">Home</a></li>
             <li><a href="#about" onclick="toggleMenu()">About</a></li>
             <li><a href="#skills" onclick="toggleMenu()">Experience</a></li>
             <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
@@ -45,7 +54,7 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Ronald Sevilla</h1>
-        <p class="section__text__p2"> Web Developer</p>
+        <p class="section__text__p2"> IT Student Developer</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -121,7 +130,7 @@
         onclick="location.href='./#experience'"
       />
     </section>
-    <section id="experience">
+    <section id="skills">
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">Experience</h1>
       <div class="experience-details-container">
@@ -205,7 +214,13 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
-            
+            <div class="project-card">
+              <h3 class="project-title">TrialWorkIM</h3>
+              <p class="project-description">A full-featured website project built with modern web technologies.</p>
+              <button class="project-btn" onclick="window.open('https://github.com/shironxiao/TrialWorkIM.git')">
+                View on GitHub
+              </button>
+            </div>
           </div>
           <div class="details-container color-container">
             
@@ -247,6 +262,7 @@
       <nav>
         <div class="nav-links-container">
           <ul class="nav-links">
+            <li><a href="#profile">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#experience">Experience</a></li>
             <li><a href="#projects">Projects</a></li>
