--- a/Skills.html
+++ b/Skills.html
@@ -39,11 +39,11 @@
         </div>
         <div class="menu-links">
           <ul>
-            <li><a href="#profile" onclick="toggleMenu()">Home</a></li>
-            <li><a href="#about" onclick="toggleMenu()">About</a></li>
-            <li><a href="#skills" onclick="toggleMenu()">Experience</a></li>
-            <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-            <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+            <li><a href="index.html" onclick="toggleMenu()">Home</a></li>
+            <li><a href="About.html" onclick="toggleMenu()">About</a></li>
+            <li><a href="Skills.html" onclick="toggleMenu()">Experience</a></li>
+            <li><a href="Project.html" onclick="toggleMenu()">Projects</a></li>
+            <li><a href="Contact.html" onclick="toggleMenu()">Contact</a></li>
           </ul>
         </div>
       </div>
