--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
           <ul>
             <li><a href="index.html" onclick="toggleMenu()">Home</a></li>
             <li><a href="About.html" onclick="toggleMenu()">About</a></li>
-            <li><a href="#skills" onclick="toggleMenu()">Experience</a></li>
-            <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-            <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+            <li><a href="Skills.html" onclick="toggleMenu()">Experience</a></li>
+            <li><a href="Project.html" onclick="toggleMenu()">Projects</a></li>
+            <li><a href="Contact.html" onclick="toggleMenu()">Contact</a></li>
           </ul>
         </div>
       </div>
