sa projec tthen Contact n lng aayusin other is finishing touches

--- a/About.html
+++ b/About.html
@@ -1,117 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="mediaquaries.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  </head>
-  <body>
-    <nav id="desktop-nav">
-      <div class="logo">Ronald</div>
-      <div>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="Skills.html">Skills</a></li>
-            <li><a href="Project.html">Projects</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-        </ul>
-      </div>
-      <button id="themeToggle" class="theme-toggle" aria-label="Toggle Light/Dark Mode">
-        <span class="toggle-icon">🌙</span>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="About.css" />
+  <link rel="stylesheet" href="AboutMediaQuaries.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+</head>
+
+<body>
+  <nav id="desktop-nav">
+    <div class="logo">Ronald</div>
+    <div>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="About.html">About</a></li>
+        <li><a href="Skills.html">Skills</a></li>
+        <li><a href="Project.html">Projects</a></li>
+        <li><a href="Contact.html">Contact</a></li>
+      </ul>
+    </div>
+    <button id="themeToggle" class="theme-toggle" aria-label="Toggle Light/Dark Mode">
+      <span class="toggle-icon">🌙</span>
     </button>
 
-    </nav>
-    <nav id="hamburger-nav">
-      <div class="logo">Ronald</div>
-      <button id="themeToggleMobile" class="theme-toggle" aria-label="Toggle Light/Dark Mode">
-        <span class="toggle-icon">🌙</span>
-      </button>
-      <div class="hamburger-menu">
-        <div class="hamburger-icon" onclick="toggleMenu()">
-          <span></span>
-          <span></span>
-          <span></span>
+  </nav>
+  <nav id="hamburger-nav">
+    <div class="logo">Ronald</div>
+    <button id="themeToggleMobile" class="theme-toggle" aria-label="Toggle Light/Dark Mode">
+      <span class="toggle-icon">🌙</span>
+    </button>
+    <div class="hamburger-menu">
+      <div class="hamburger-icon" onclick="toggleMenu()">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <div class="menu-links">
+        <ul>
+          <li><a href="index.html" onclick="toggleMenu()">Home</a></li>
+          <li><a href="About.html" onclick="toggleMenu()">About</a></li>
+          <li><a href="Skills.html" onclick="toggleMenu()">Experience</a></li>
+          <li><a href="Project.html" onclick="toggleMenu()">Projects</a></li>
+          <li><a href="Contact.html" onclick="toggleMenu()">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <section id="about">
+    <p class="section__text__p1">Get To Know More</p>
+    <h1 class="title">About Me</h1>
+    <div class="section-container">
+      <div class="section__pic-container">
+        <img src="./assets/PhotoAi.png" alt="Profile picture" class="about-pic" />
+      </div>
+      <div class="about-details-container">
+        <div class="about-containers">
+
         </div>
-        <div class="menu-links">
-          <ul>
-            <li><a href="index.html" onclick="toggleMenu()">Home</a></li>
-            <li><a href="About.html" onclick="toggleMenu()">About</a></li>
-            <li><a href="Skills.html" onclick="toggleMenu()">Experience</a></li>
-            <li><a href="Project.html" onclick="toggleMenu()">Projects</a></li>
-            <li><a href="Contact.html" onclick="toggleMenu()">Contact</a></li>
-          </ul>
+        <div class="text-container">
+          <p>
+            I'm a BSIT student with big dreams of achieving success and providing my family with a better life. I aim to create opportunities for them and help them experience things they've never had before. I'm dedicated and hardworking, focused on turning my dreams into reality. I’m constantly pushing myself to grow, learn new skills, and make the most out of every opportunity that comes my way. Every step I take is driven by my desire to build a future I can be proud of. I may still be learning, but I’m determined to become someone who can inspire and support the people I love.
+          </p>
         </div>
       </div>
-    </nav>
-    <section id="about">
-      <p class="section__text__p1">Get To Know More</p>
-      <h1 class="title">About Me</h1>
-      <div class="section-container">
-        <div class="section__pic-container">
-          <img
-            src="./assets/PhotoAi.png"
-            alt="Profile picture"
-            class="about-pic"
-          />
-        </div>
-        <div class="about-details-container">
-          <div class="about-containers">
-            <div class="details-container">
-              <img
-                src="./assets/education.png"
-                alt="Education icon"
-                class="icon"
-              />
-              <h3>Education</h3>
-              <div class="education-list">
-                <div class="education-item">
-                  <h4>M. Cacho Elementary School</h4>
-                  <p class="education-year">2016-2017</p>
-                </div>
-                <div class="education-item">
-                  <h4>San Francisco National High School</h4>
-                  <p class="education-year">2021-2022</p>
-                </div>
-                <div class="education-item">
-                  <h4>Vinzons Pilot High School</h4>
-                  <p class="education-year">2021-2022</p>
-                </div>
-                <div class="education-item">
-                  <h4>Camarines Norte State College</h4>
-                  <p class="education-year">2022-2025</p>
-                  <p class="education-status">Currently attending college</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="text-container">
-            <p>
-                I'm a BSIT student with big dreams of achieving success and providing my family with a better life. 
-                I aim to create opportunities for them and help them experience things they've never had before. 
-                I'm dedicated and hardworking, focused on turning my dreams into reality.
-            </p>
-          </div>
+    </div>
+  </section>
+  <section id="personal-touch">
+    <h1 class="title">Personal Touch</h1>
+    <div class="section-container personal-touch-container">
+      <div class="about-details-container">
+        <div class="text-container">
+          <p>
+            I'm currently focusing on personal growth while learning full-stack development and improving my
+            communication skills. I enjoy challenging myself with new knowledge, exploring different technologies, and
+            finding ways to become more confident and capable in both my personal and professional life. As I continue
+            learning, I'm discovering how much I enjoy building things, solving problems, and understanding how ideas
+            come together to create something meaningful.
+          </p>
+          <p>
+            Outside of learning and self-development, I'm passionate about anime and online games, which are a big part
+            of how I relax and express myself. I love connecting with people who share the same interests and finding
+            common ground through stories, characters, or gameplay. At my core, I'm humble and quietly observant,
+            someone who pays attention to the world around me and finds joy in life's little moments—those small,
+            peaceful things that make each day feel worthwhile.
+          </p>
         </div>
       </div>
-    </section>
-    <footer>
-      <nav>
-        <div class="nav-links-container">
-          <ul class="nav-links">
-            <li><a href="Project.html">Home</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="Skills.html">Skills</a></li>
-            <li><a href="Project.html">Projects</a></li>
-            <li><a href="Contact.html">Contact</a></li> 
-          </ul>
-        </div>
-      </nav>
-    </footer>
-    <script src="script.js"></script>
-  </body>
+      <div class="section__pic-container personal-touch-pic">
+        <img src="./assets/CuteBoy.png" alt="Cute boy graphic image" class="about-pic" />
+      </div>
+    </div>
+  </section>
+  <footer>
+    <div id="socials-container">
+      <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon"
+        onclick="location.href='https://www.linkedin.com/in/ronald-sevilla-124081190/'" />
+      <img src="./assets/github.png" alt="My Github profile" class="icon"
+        onclick="location.href='https://github.com/shironxiao/shironxiao'" />
+      <img src="./assets/facebook.png" alt="My facebook profile" class="icon"
+        onclick="location.href='https://www.facebook.com/shiron08/'" />
+      <img src="./assets/instagram.png" alt="My instagram profile" class="icon"
+        onclick="location.href='https://https://www.instagram.com/sh_i_ron'" />
+    </div>
+    <nav>
+      <div class="nav-links-container">
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="About.html">About</a></li>
+          <li><a href="Skills.html">Skills</a></li>
+          <li><a href="Project.html">Projects</a></li>
+          <li><a href="Contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <p class="copyright">© 2025 Ronald • All rights reserved.</p>
+  </footer>
+  <script src="script.js"></script>
+</body>
+
 </html>
