--- a/index.html
+++ b/index.html
@@ -67,7 +67,32 @@
             Contact Info
           </button>
         </div>
-        <div id="socials-container">
+      </div>
+    </section>
+    <section id="What i do">
+      <div class="intro-text-container">
+        <p class="title">What I Do as a Beginner Developer</p>
+        <p class="section__text__p2">
+          I'm a beginner backend developer who enjoys working with server-side
+          logic, data handling, and the hidden parts of applications that make
+          everything function smoothly. I'm learning how to break down complex
+          problems and turn them into simple, efficient solutions that support
+          the overall performance of a project. The more I explore backend
+          concepts, the more excited I become about understanding how systems
+          connect and operate behind the scenes.
+        </p>
+        <p class="section__text__p2">
+          I focus on building basic APIs, managing databases, and improving my
+          skills through hands-on projects and continuous learning. Every new
+          challenge helps me grow, whether it's debugging issues, organizing
+          data, or experimenting with different backend tools and frameworks.
+          With each step, I'm becoming more confident in creating reliable
+          backend features and shaping my path as a backend developer.
+        </p>
+      </div>
+    </section>
+    <footer>
+      <div id="socials-container">
           <img
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
@@ -80,11 +105,19 @@
             class="icon"
             onclick="location.href='https://github.com/shironxiao/shironxiao'"
           />
+          <img
+            src="./assets/facebook.png"
+            alt="My facebook profile"
+            class="icon"
+            onclick="location.href='https://www.facebook.com/shiron08/'"
+          />
+          <img
+            src="./assets/instagram.png"
+            alt="My instagram profile"
+            class="icon"
+            onclick="location.href='https://https://www.instagram.com/sh_i_ron'"
+          />
         </div>
-      </div>
-    </section>
-  
-    <footer>
       <nav>
         <div class="nav-links-container">
           <ul class="nav-links">
@@ -96,6 +129,7 @@
           </ul>
         </div>
       </nav>
+      <p class="copyright">© 2025 Ronald • All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
