--- a/Contact.html
+++ b/Contact.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="mediaquaries.css" />
+    <link rel="stylesheet" href="Contact.css" />
+    <link rel="stylesheet" href="ContactMediaQuaries.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   </head>
   <body>
@@ -71,6 +71,32 @@
       </div>
     </section>
     <footer>
+      <div id="socials-container">
+          <img
+            src="./assets/linkedin.png"
+            alt="My LinkedIn profile"
+            class="icon"
+            onclick="location.href='https://www.linkedin.com/in/ronald-sevilla-124081190/'"
+          />
+          <img
+            src="./assets/github.png"
+            alt="My Github profile"
+            class="icon"
+            onclick="location.href='https://github.com/shironxiao/shironxiao'"
+          />
+          <img
+            src="./assets/facebook.png"
+            alt="My facebook profile"
+            class="icon"
+            onclick="location.href='https://www.facebook.com/shiron08/'"
+          />
+          <img
+            src="./assets/instagram.png"
+            alt="My instagram profile"
+            class="icon"
+            onclick="location.href='https://https://www.instagram.com/sh_i_ron'"
+          />
+        </div>
       <nav>
         <div class="nav-links-container">
           <ul class="nav-links">
@@ -82,6 +108,7 @@
           </ul>
         </div>
       </nav>
+      <p class="copyright">© 2025 Ronald • All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
