--- a/Skills.html
+++ b/Skills.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="mediaquaries.css" />
+    <link rel="stylesheet" href="Skills.css" />
+    <link rel="stylesheet" href="SkillsMediaQuaries.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   </head>
   <body>
@@ -50,64 +50,123 @@
     </nav>
     <section id="skills">
       <p class="section__text__p1">Explore My</p>
-      <h1 class="title">Experience</h1>
+      <h1 class="title">Skills</h1>
       <div class="experience-details-container">
-        <div class="about-containers">
-          <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
-            <div class="article-container">
-              <article>
-                <i class="fab fa-html5" style="font-size: 2rem; color: #E34C26;"></i>
-                <div>
-                  <h3>HTML</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <i class="fab fa-css3-alt" style="font-size: 2rem; color: #1572B6;"></i>
-                <div>
-                  <h3>CSS</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <i class="fab fa-js-square" style="font-size: 2rem; color: #F7DF1E;"></i>
-                <div>
-                  <h3>JavaScript</h3>
-                  <p>novice </p>
-                </div>
-              </article>
+        <div class="skills-grid">
+          <article>
+            <i class="fab fa-html5" style="font-size: 6rem; color: #E34C26;"></i>
+            <div>
+              <h3>HTML</h3>
+              <p>Basic</p>
             </div>
-          </div>
-          <div class="details-container">
-            <h2 class="experience-sub-title">Backend Development</h2>
-            <div class="article-container">
-              <article>
-                <i class="fas fa-database" style="font-size: 2rem; color: #4479A1;"></i>
-                <div>
-                  <h3>MySQL</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <i class="fab fa-php" style="font-size: 2rem; color: #777BB4;"></i>
-                <div>
-                  <h3>PHP</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
+          </article>
+          <article>
+            <i class="fab fa-css3-alt" style="font-size: 6rem; color: #1572B6;"></i>
+            <div>
+              <h3>CSS</h3>
+              <p>Basic</p>
             </div>
-          </div>
+          </article>
+          <article>
+            <i class="fab fa-js-square" style="font-size: 6rem; color: #F7DF1E;"></i>
+            <div>
+              <h3>JavaScript</h3>
+              <p>Novice</p>
+            </div>
+          </article>
+          <article>
+            <i class="fas fa-database" style="font-size: 6rem; color: #4479A1;"></i>
+            <div>
+              <h3>MySQL</h3>
+              <p>Basic</p>
+            </div>
+          </article>
+          <article>
+            <i class="fab fa-php" style="font-size: 6rem; color: #777BB4;"></i>
+            <div>
+              <h3>PHP</h3>
+              <p>Basic</p>
+            </div>
+          </article>
+          <article>
+            <i class="fab fa-github" style="font-size: 6rem; color: #181717;"></i>
+            <div>
+              <h3>GitHub</h3>
+              <p>Basic</p>
+            </div>
+          </article>
+          <article>
+            <i class="fab fa-git-alt" style="font-size: 6rem; color: #F05032;"></i>
+            <div>
+              <h3>Git</h3>
+              <p>Basic</p>
+            </div>
+          </article>
+          <article>
+            <i class="fas fa-server" style="font-size: 6rem; color: #FB7A24;"></i>
+            <div>
+              <h3>XAMPP</h3>
+              <p>Basic</p>
+            </div>
+          </article>
+          <article>
+            <i class="fab fa-java" style="font-size: 6rem; color: #007396;"></i>
+            <div>
+              <h3>Java</h3>
+              <p>Basic</p>
+            </div>
+          </article>
+          <article>
+            <i class="fas fa-code" style="font-size: 6rem; color: #68217A;"></i>
+            <div>
+              <h3>Visual Basic</h3>
+              <p>Basic</p>
+            </div>
+          </article>
+          <article>
+            <i class="fab fa-figma" style="font-size: 6rem; color: #F24E1E;"></i>
+            <div>
+              <h3>Figma</h3>
+              <p>Basic</p>
+            </div>
+          </article>
+          <article>
+            <i class="fas fa-fire" style="font-size: 6rem; color: #FFA611;"></i>
+            <div>
+              <h3>Firestore</h3>
+              <p>Basic</p>
+            </div>
+          </article>
         </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#projects'"
-      />
     </section>
-    <footer>
+     <footer>
+      <div id="socials-container">
+          <img
+            src="./assets/linkedin.png"
+            alt="My LinkedIn profile"
+            class="icon"
+            onclick="location.href='https://www.linkedin.com/in/ronald-sevilla-124081190/'"
+          />
+          <img
+            src="./assets/github.png"
+            alt="My Github profile"
+            class="icon"
+            onclick="location.href='https://github.com/shironxiao/shironxiao'"
+          />
+          <img
+            src="./assets/facebook.png"
+            alt="My facebook profile"
+            class="icon"
+            onclick="location.href='https://www.facebook.com/shiron08/'"
+          />
+          <img
+            src="./assets/instagram.png"
+            alt="My instagram profile"
+            class="icon"
+            onclick="location.href='https://https://www.instagram.com/sh_i_ron'"
+          />
+        </div>
       <nav>
         <div class="nav-links-container">
           <ul class="nav-links">
@@ -119,6 +178,7 @@
           </ul>
         </div>
       </nav>
+      <p class="copyright">© 2025 Ronald • All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
