Porject mostly ewan

--- a/Project.html
+++ b/Project.html
@@ -51,21 +51,34 @@
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
-      <div class="experience-details-container">
-        <div class="about-containers">
-          <div class="details-container color-container">
-            <div class="project-card">
-              <h3 class="project-title">Tabeya</h3>
-              <p class="project-description">Tabeya — a restaurant website project (live demo).</p>
-              <button class="project-btn" onclick="window.open('https://shironxiao.github.io/IT100webDev/Tabeya/index.html')">
-                View Project
-              </button>
+      <div class="project-container">
+        <div class="project-panel">
+          <div class="project-image">
+            <img src="./assets/ProjectImage.png" alt="Project Preview" onerror="this.style.background='linear-gradient(135deg, var(--accent), var(--card-bg))'">
+          </div>
+          <div class="project-content">
+            <h2 class="project-title">My Portfolio Website</h2>
+            <p class="project-description">
+              A modern, responsive portfolio website showcasing my skills and projects. 
+              Features a clean design with light/dark mode toggle and smooth navigation experience.
+            </p>
+            <div class="tech-stack">
+              <div class="tech-item">
+                <i class="fab fa-html5"></i>
+                <span>HTML</span>
+              </div>
+              <div class="tech-item">
+                <i class="fab fa-css3-alt"></i>
+                <span>CSS</span>
+              </div>
+              <div class="tech-item">
+                <i class="fab fa-js"></i>
+                <span>JavaScript</span>
+              </div>
             </div>
-          </div>
-          <div class="details-container color-container">
-            
-          </div>
-          <div class="details-container color-container">
+            <button class="project-btn" onclick="window.open('https://shironxiao.github.io/BeginnerPortfolio/')">
+              <i class="fas fa-external-link-alt"></i> View Live Demo
+            </button>
           </div>
         </div>
       </div>
